Remove public function putprop(); use si_putprop() instead. Removed public functions FEtype_error_plist(). Low level function getf() and get() renamed as ecl_get[f](). Simplified the loops which deal with property lists. Assertions ASSERT and CHECK-TYPE moved from conditions.lisp to assert.lisp; old definitions removed.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1264,8 +1264,8 @@ ECLS 0.9
   - The interpreter now detects syntax errors in function calls: such
     as in (setq a ("foo")).
 
-  - Functions remf() and remprop() removed. Use si_rem_f and cl_remprop
-    instead.
+  - Functions remf(), remprop() and putprop() removed. Use si_rem_f,
+    cl_remprop and cl_putprop instead.
 
 * ANSI compatibility:
 
