Create new functions SI::{GET,PUT,REM}-SYSPROP to handle vital information about functions, SETF forms, DEFTYPEs, etc. Property lists are no longer used for this task.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1335,6 +1335,12 @@ ECLS 0.9
 
   - Implemented type EXTENDED-CHAR.
 
+  - Property lists are no longer used to store vital
+    information. Things like SETF expansions, DEFTYPEs, etc, are now
+    stored and retrieved using SI::{GET,PUT,REM}-SYSPROP. The current
+    implementation is based on a hash table, which means that some
+    symbols may not be garbage collected.
+
 TODO:
 =====
 
