Fixed parsing of DEFGENERIC so that only supplied options are passed to ENSURE-GENERIC-FUNCTION, and the :METHOD options are interpreted.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1537,6 +1537,8 @@ ECLS 0.9b
 
   - Method combinations are now fully supported.
 
+  - DEFGENERIC now accepts the :METHOD-COMBINATION and :METHOD options.
+
 TODO:
 =====
 
