--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1621,6 +1621,9 @@ ECL 0.9c
     Boehm-Weiser garbage collector cannot scan the data sections of
     any libraries, and that register_root must be used everywhere.
 
+  - READ/WRITE-SEQUENCE would read or write one element more than
+    required.
+
 TODO:
 =====
 
