--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1632,6 +1632,8 @@ ECL 0.9c
   - READ/WRITE-SEQUENCE would read or write one element more than
     required.
 
+  - LOAD-TIME-VALUE was broken.
+
 * ANSI compatibility:
 
   - Hashtables can now have EQUALP as test function.
