--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1686,6 +1686,36 @@ ECL 0.9d
   - The actual implementation uses POSIX threads under Linux. Ports to
     other operating systems are being worked out.
 
+* System design: Debugging
+
+  - The bytecodes interpreter now implements a barebones debugger, in
+    which the facilities TRACE, STEP are available, and the content of
+    local variables may be inspected and changed. To use the debugger,
+    you must have activated the memoization of function definitions,
+    by using (setf si::*keep-definitions* t). Sample session:
+	> (defun foo (x) (print x)) (step (foo 2))
+	FOO
+	Top level.
+	> (FOO 2) ->
+	(PRINT X) - :v
+	Block names: FOO.
+	Local variables:
+	  X: 2
+	Broken at FOO.
+	(PRINT X) - (setf x 3)
+	3
+	Broken at FOO.
+	(PRINT X) - :v
+	Block names: FOO.
+	Local variables:
+	  X: 3
+	Broken at FOO.
+	(PRINT X) -
+	3
+	3
+	Top level.
+
+
 * Errors fixed:
 
   - Bugs in the mechanism for automatically creating packages when
