--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1662,6 +1662,8 @@ ECL 0.9d
 
 * Supported platforms:
 
+  - ECL now builds under Windows using MinGW-32.
+
   - It is possible now under OS/X to build ECL as a shared library and
     to compile and load code on the fly.
 
@@ -1740,6 +1742,12 @@ ECL 0.9d
 
   - SI:FILE-COLUMN now always returns a number, which may be 0 for
     streams that do not have that information.
+
+  - The compiler (COMPILE-FILE, COMPILE, etc), now understands
+    logical pathnames.
+
+  - Under windows, the system directory is defined to be the place
+    where ecl.exe resides.
 
 TODO:
 =====
