--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1765,6 +1765,12 @@ ECL 0.9d
     file that links against ECL. It does not include optimization flags, or
     flags to create position independent object files.
 
+* ANSI compatibility:
+
+  - No symbol is exported from the CL package other than those specificied in
+    the standard. ECL extensions, such as the types BYTE8, UNSIGNED-BYTE8,
+    are now in the package EXT (which is temporarily an alias of SYSTEM).
+
 TODO:
 =====
 
