--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1790,6 +1790,10 @@ ECL 0.9d
   - SXHASH now always returns positive fixnums and produces the same key for
     two bitvectors which are EQUAL.
 
+  - Implemented the class redefinition protocol, which involves
+    CHANGE-CLASS, UPDATE-INSTANCE-FOR-{REDEFINED,NEW}-CLASS, and
+    MAKE-INSTANCES-OBSOLETE.
+
 TODO:
 =====
 
